--- a/frontdev/main.css
+++ b/frontdev/main.css
@@ -285,3 +285,33 @@
 
 }
 
+
+.inform-column-mail{
+    max-width: 245px;
+    max-height: 232px;
+    line-height: 20px;
+}
+
+
+
+.email-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #ffffff;
+
+}
+
+.back-header-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #B5C096;
+
+}
